# CryptoCarbon

./: .gitignore  README.md  pyproject.toml
analysis/: methods.py
analysis/management/commands/: average_true_range.py
carbon/: asgi.py  settings.py  urls.py  wsgi.py
tickerUpdater/: analysis.py  kucoin_api.py  updater.py
tickers/: apps.py  models.py
tickers/management/commands/: get_daily_data.py  list_tickers.py  load_markets.py  update_tickers.py
tickers/migrations/: 0001_initial.py  0002_auto_20211203_1724.py  0003_auto_20211203_1758.py  0004_tradekines.py  0005_rename_tradekines_tradeklines.py  0006_lookupevent_lookupschedule_lookupscheduletype.py  0007_auto_20211204_1134.py  0008_auto_20211204_1136.py  0009_add_schedules.py  0010_auto_20211204_1227.py  0011_alter_lookupevent_datum_count.py  0012_tradeklines_atr.py
