[tool.poetry]
name = "carbon"
version = "0.1.0"
description = ""
authors = ["Oliver Sealey <osealey.jobs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.2.9"
APScheduler = "^3.8.1"
requests = "^2.26.0"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
